@@ -22,7 +22,14 @@
     If this listener will be deleted, ox backend will add it programmatically.
     -->
     <contextListener class="ch.qos.logback.classic.jul.LevelChangePropagator"/>
-
+    
+    <!-- 
+    Adds the required PatternLayouts if not yet done by another Open-Xchange PatternLayoutEncoder. This is 
+    especially required when using SYSLOG appender. If you remove this definition and no PatternLayout can be 
+    found a PARSER_ERROR will be thrown within the log.
+    -->
+    <define name="syslogPatternLayoutActivator" class="com.openexchange.logback.extensions.SyslogPatternLayoutActivator" />
+ 	
     <appender name="CONSOLE" class="ch.qos.logback.core.ConsoleAppender">
         <encoder class="com.openexchange.logback.extensions.ExtendedPatternLayoutEncoder">
             <pattern>%date{"yyyy-MM-dd'T'HH:mm:ss,SSSZ"} %-5level [%thread] %class.%method\(%class{0}.java:%line\)%n%message%n%lmdc%exception{full}</pattern>
