@@ -1,3 +1,7 @@
+* 2014-04-07 - martin.schneider@open-xchange.com
+
+ - Fix for bug 31797: Initialize PatternLayout for LMDC manually if just the SyslogAppender is configured
+
 * 2014-04-07 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 31685: Added displayable exception message for IFO-1700
